Add lab1 description and example code

--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Others
+# datasets and temperary files
+data/
+tmp/
+
+# others
 .DS_Store
